# undivisible.dev

./: .gitignore  .prettierignore  .replit  CLAUDE.md  Cargo.toml  README.md  about.html  index.html  mail.php  one.html  package.json  pnpm-lock.yaml  replit.md  resume.md  script.js  see.html  seeab.html  styles.css  turbo.json
.claude/: ecc-tools.json  identity.json
.codex/: AGENTS.md
.github/workflows/: build-all.yml  deploy.yml
.migration-backup/: .replit  LICENSE  README.md  package-lock.json
.turbo/cache/: 3f53739769d7fb39-manifest.json  3f53739769d7fb39-meta.json  3f53739769d7fb39.tar.zst
alpha/r1/: index.html  pnpm-lock.yaml
alpha/r2/: package.json
app/: layout.tsx  robots.ts
app/about/: page.tsx
artifacts/undivisible/: index.html  next.config.ts  package.json  tsconfig.json  vite.config.ts
assets/: script.js  styles.css
components/: BouncingShapes.tsx  SiteShell.tsx
crepuscularity-site/: index.crepus  site.json  web.toml
crepuscularity-site/.crepus-cache/: a5fb7bb9c0b9c87c-_-render
crepuscularity-site/runtime/: Cargo.toml
crepuscularity-site/runtime/src/: lib.rs
id/: index.html  one.html
lib/api-client-react/: package.json
lib/api-spec/: package.json  tsconfig.json
next/: index.html  styles.css
old/: script.js  styles.css
old/seven/: Cargo.toml  README.md
old/seven/src/: main.rs
one/: index.html
ru/: index.html  one.html
scripts/: apply-crepus-link-placeholders.mjs  build-static.sh  package.json  post-merge.sh
site-tools/: Cargo.toml
src/: main.rs
static/: translations.json
web/: .gitignore  README.md  next.config.ts  package.json  tsconfig.json
zh/: index.html  one.html
(+272 files in other folders)
